--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker:
+  # image_picker :
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.5
+  image_picker: ^0.6.7+4
+  firebase_storage: ^3.1.6
 
 dev_dependencies:
   flutter_test:
