--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.5
+  firebase_core: ^0.4.4+3
   adobe_xd: ^0.1.4
 
   image_picker: ^0.6.7+4
   firebase_storage: ^3.1.6
+  firebase_messaging: ^6.0.9
 
   shared_preferences: ^0.5.7
 
