--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 25 08:39:36 IST 2020
-sdk.dir=C\:\\Users\\Tejas Anghan\\AppData\\Local\\Android\\Sdk
+#Sun Jul 26 18:42:15 IST 2020
+sdk.dir=C\:\\Users\\alenj\\AppData\\Local\\Android\\Sdk
