--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 29 16:45:45 IST 2020
-sdk.dir=C\:\\Users\\Tejas Anghan\\AppData\\Local\\Android\\Sdk
+#Thu Jul 30 01:31:07 IST 2020
+sdk.dir=C\:\\Users\\alenj\\AppData\\Local\\Android\\Sdk
