--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 30 01:42:34 IST 2020
-sdk.dir=C\:\\Users\\Tejas Anghan\\AppData\\Local\\Android\\Sdk
+#Fri Jul 31 16:42:52 IST 2020
+sdk.dir=C\:\\Users\\alenj\\AppData\\Local\\Android\\Sdk
