--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_messaging: ^6.0.9
 
   shared_preferences: ^0.5.7
-
+  cached_network_image: ^2.2.0+1
   intl: ^0.16.1
   timeago: ^2.0.26
   provider: ^4.3.1
