--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   page_transition: ^1.1.6
   video_trimmer: ^0.2.7
   flutter_ffmpeg: ^0.2.10
-  video_player: ^0.10.12+2
+  #video_player: ^0.10.12+2
   file_picker: ^1.13.3
   audioplayers: ^0.16.0
 
