--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   adobe_xd: ^0.1.4
 
   image_picker: ^0.6.7+4
-  video_player: ^0.10.2+1
+  #video_player: ^0.10.2+1
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.9
   firebase_database: ^3.0.0
