--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 05 14:37:50 IST 2020
-sdk.dir=C\:\\Users\\alenj\\AppData\\Local\\Android\\Sdk
+#Fri Sep 18 12:00:37 IST 2020
+sdk.dir=C\:\\Users\\Tejas Anghan\\AppData\\Local\\Android\\Sdk
